compiler/tests/fixtures/compile_errors/numeric_capacity_mismatch/u8_neg.fe
contract Foo:
    pub def bar() -> u8:
        return u8(-1)